--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "d3": "^5.16.0",
+    "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue2-filters": "^0.11.0",
