--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "d3": "^5.16.0",
+    "highcharts": "^8.1.0",
     "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vue2-filters": "^0.11.0",
-    "vuex": "^3.4.0"
+    "vue2-filters": "^0.11.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
