--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "highcharts": "^8.1.0",
+    "highcharts-vue": "^1.3.5",
     "jw-vue-pagination": "^1.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
